@@ -1,0 +1,20 @@
+using namespace std;
+//replace all "search" with "replace" in "subject"
+string str_replace(const string& search, const string& replace, const string& subject) {
+    string str = subject;
+    size_t pos = 0;
+    while((pos = str.find(search, pos)) != string::npos) {
+        str.replace(pos, search.length(), replace);
+        pos += replace.length();
+    }
+    return str;
+}
+//cut string after first "search"
+string str_cut(const string& search, const string& subject) {
+    string str = subject;
+    size_t found = str.find_first_of(search);
+    if (found != string::npos) {
+        return str.substr(0, found);
+    }
+    return "";
+}
